# bob-launcher

./: .gitignore  README.md  guide.md  meson.build  native-dev.ini
data/: Application.css  io.github.trbjo.bob.launcher.gresource.xml  io.github.trbjo.bob.launcher.gschema.xml
resources/: io.github.trbjo.bob.launcher.service
src/: main.c  main.vala
src/C/: access-appinfo-props.c  access-appinfo-props.h  app.c  cheaper-gtk.h  common-launcher.c  common-launcher.h  constants.h  controller.c  controller.h  css.c  css.h  data-sink-actions.c  data-sink-plugins.c  data-sink-sources.c  data-sink-sources.h  dbus-scope-monitor.c  dbus-scope-monitor.h  description.c  description.h  drag-and-drop-handler.c  drag-controller.c  drag-controller.h  events.c  events.h  fast-label.c  fast-label.h  file-match.c  file-match.h  hashset.c  hashset.h  highlight.c  highlight.h  icon-cache-service.c  keybindings.c  keybindings.h  launch-context.c  launch-context.h  launcher-window.c  launcher-window.h  main-container.c  (+46 more)
src/C/fzy/: bonus.h  config.h  hashset.c  hashset.h  match.c  match.h
src/api/: interfaces.vala
src/core/: appsettings.vala  constants.vala  data-sink-actions.vala  data-sink.vala  utils.vala
src/core/launch-context/: access-appinfo-props.h  common-launcher.vala  launch-context.vala  systemd-launcher.vala
src/core/match/: description.vala  file-match.vala  match.vala  paintable.vala  unknown-match.vala
src/core/plugin/: plugin-base.vala  plugin-loader.vala  search-base.vala
src/core/search/: action-set.vala  result-container.c
src/gui/: css.vala  drag-and-drop-handler.vala  drag-controller.vala  icon-cache-service.vala  input-region.vala  layershell.vala  scroll-controller.vala  state.vala  utils.vala
src/gui/widgets/: launcher-window.vala  main-container.vala  match-row-label.vala  match-row.vala  query-container.vala  resize-handle.vala  result_box.vala  row-number.vala  text-image.vala  width-resize-handle.vala
subprojects/: file-monitor.wrap  gtk4-settings-library.wrap  plugins.wrap  simple-keyboard.wrap  thread-manager.wrap
vapi/: bob-launcher-plugin.vapi  c-bindings.vapi  constants.vapi  controller.vapi  data-sink-actions.vapi  dbus-scope-monitor.vapi  description.vapi  file-match.vapi  hashset.vapi  highlight.vapi  keybindings.vapi  launch-context.vapi  launcher-window.vapi  levensteihn.vapi  main-container.vapi  match-row-label.vapi  match-row.vapi  plugin-base.vapi  result-box.vapi  result-container.vapi  state.vapi  string-utils.vapi  systemd-scope.vapi  systemd-service.vapi
